Refactor: Remove passing function references